# audit/app.py
@@ -97,6 +97,10 @@ def get_infrared_report(index):
     logger.error("Could not find Report Patrol at index %d" % index)
     return { "message": "Not Found"}, 404
 
+def get_health():
+    status = {status: "Running"}
+    return Response(json.dumps(status['payload'], indent=1), 200)
+
 app.add_api("openapi.yml", strict_validation=True, validate_responses=True)
 
 if __name__ == '__main__':
