# receiver/openapi.yml
@@ -51,6 +51,28 @@ paths:
           description: report created
         "400":
           description: the input was invalid
+  /health:
+    get:
+      summary: says if it's "Running"
+      operationId: app.get_health
+      responses:
+        "200":
+          description: Successfully returned a health status
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: "#/components/schemas/Health"
+        "400":
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
 components:
   schemas:
     PatrolReport:
@@ -77,7 +99,6 @@ components:
         writeup:
           type: string
           example: All clear.
-
     SensorReport:
       required:
       - sensor_id
@@ -100,3 +121,11 @@ components:
         status_code:
           type: integer
           example: 0
+    Health:
+      required: 
+      - status
+      type: object
+      properties: 
+        status_code:
+          type: string
+          example: "Running"
